--- a/pages/historyOrder/historyOrder.wxml
+++ b/pages/historyOrder/historyOrder.wxml
@@ -5,19 +5,19 @@
 </view>
 <view class="container">
   <view class='list-title'>全部订单</view>
-  <view class='list'> 
-    <view class='top'>订单日期   2019年3月19日 16:55</view>
+  <view class='list' wx:for="{{orderList}}"  wx:for-index="index" wx:key="*this"> 
+    <view class='top'>订单日期   {{item.time}}</view>
     <view class='bottom'>
-      <view>商品数量<text>2</text></view>
-      <view>订单金额<text class='orange'>5000</text></view>
+      <view>商品数量：<text>{{item.order_item_list[0].num}}</text></view>
+      <view>订单金额：<text class='orange'>{{item.goods_money}}</text></view>
     </view>
     <view class='bottom'>
-      <view class='elli1'>订单编号：BH01111123456</view>
-      <view class='elli1'>设备编号：#BH00102</view>
+      <view class='elli1'>订单编号：{{item.out_trade_no}}</view>
+      <view class='elli1'>设备编号：{{item.order_item_list[0].code}}</view>
     </view>
   </view>
 
-  <view class='list'>
+  <!-- <view class='list'>
     <view class='top'>订单日期  2019年3月19日 16:55</view>
     <view class='bottom'>
       <view>商品数量<text>2</text></view>
@@ -39,5 +39,5 @@
       <view class='elli1'>订单编号：BH01111123456</view>
       <view class='elli1'>设备编号：#BH00102</view>
     </view>
-  </view>
+  </view> -->
 </view>
