--- a/pages/myInfo/myInfo.wxml
+++ b/pages/myInfo/myInfo.wxml
@@ -5,32 +5,35 @@
 </view>
 <view class="container">
   <view class='info-box'>
-    <view class='info-list'>
+    <view class='info-list' bindtap='uploadImg'>
       <view class='name'>头像</view>
       <view class='con'>
-       <icon class='tou'><image src='/icons/tou.png'></image></icon>
+       <icon class='tou'>
+        <!-- <image src='{{ImgUrl}}{{img}}'></image> -->
+         <image src="{{img == '' ?avatarUrl:img}}"></image> 
+       </icon>
        <icon class='right-arrow'><image src='/icons/right-arrow.png'></image></icon>
-      </view>
+      </view> 
     </view>
     <view class='info-list'>
-      <view class='name'>昵称</view>
+      <view class='name'>昵称</view> 
       <view class='con'>
-        <input type='text' value='' placeholder='请输入昵称'/>
+        <input type='text' value="{{info.nick_name==''?nickName:info.nick_name}}" placeholder='请输入昵称' bindinput='nameInput'/>
       </view>
-    </view>
+    </view> 
     <view class='info-list'>
       <view class='name'>用户ID</view>
-      <view class='con'>78945</view>
+      <view class='con'>{{info.uid}}</view>
     </view>
     <view class='info-list1'>
-      <view class='name'>个人签名</view>
+      <view class='name'>个人签名</view> 
       <view class='con'>
-        <textarea placeholder='请输入个性签名'></textarea>
+        <textarea placeholder='请输入个性签名' bindinput='gqianInput' value='{{info.signature}}'></textarea>
       </view>
     </view>
   </view>
 
-  <view class='left-btn'>
+  <view class='left-btn' bindtap='updateInfo'>
     <text class='linercolor'>确定</text>
   </view>
 </view>
