--- a/pages/recharge/recharge.wxml
+++ b/pages/recharge/recharge.wxml
@@ -9,7 +9,7 @@
     <text class='title'>请选择充值金额</text>
     <view class='btn-list clearfix'>
       <block wx:for="{{select}}" wx:for-index="index" wx:key="*this">
-        <text data-key="{{index}}" bindtap='choose' class="{{isChecked==index ? 'act':''}}">{{item}}</text>
+        <text data-key="{{index}}" data-value="0.01" bindtap='choose' class="{{isChecked==index ? 'act':''}}">{{item}}</text>
       </block>
       
       <!-- <text bindtap='choose'>20元</text> -->
@@ -22,7 +22,7 @@
   <view class='middle'>
     <view class='title'>请确认充值账户</view>
     <view>
-      <text class='blue'>15503793860</text>
+      <text class='blue'>{{nick_name}}</text>
       <text class='username'>用户名</text>
     </view>
   </view>
@@ -35,6 +35,6 @@
   </view>
 
   <view class='left-btn'>
-    <text class='linercolor'>确认充值</text>
+    <text class='linercolor' bindtap='reCharge'>确认充值</text>
   </view>
 </view>
