--- a/pages/yue/yue.wxss
+++ b/pages/yue/yue.wxss
@@ -66,7 +66,7 @@ page{
   align-items: center;
 }
 .member-list .member-list-con{
-  border-bottom: 1px solid #b7b7b7;
+  /* border-bottom: 1px solid #b7b7b7; */
 }
 .member-list .member-list-con .left{
    width: 80%;
